--- a/client/pages/history/history.html
+++ b/client/pages/history/history.html
@@ -3,17 +3,12 @@
         <button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>
-            Home
-        </ion-title>
+        <ion-title>History</ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content>
     <ion-list>
-        <ion-list-header>
-            My Food
-        </ion-list-header>
         <ion-item>
             <ion-avatar item-left>
                 <img src="http://lorempixel.com/100/100/food">
@@ -33,8 +28,4 @@
             <ion-note item-right>-$20</ion-note>
         </ion-item>
     </ion-list>
-
-    <button fab fab-right fab-bottom primary fab-fixed>
-        <ion-icon name="add"></ion-icon>
-    </button>
 </ion-content>
