Implement Add Food Item Modal

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -34,7 +34,7 @@
         </ion-item>
     </ion-list>
 
-    <button fab fab-right fab-bottom primary fab-fixed>
+    <button fab fab-right fab-bottom primary fab-fixed (click)="addFoodItem()">
         <ion-icon name="add"></ion-icon>
     </button>
 </ion-content>
