--- a/client/pages/budget/budget.html
+++ b/client/pages/budget/budget.html
@@ -8,5 +8,17 @@
 </ion-header>
 
 <ion-content>
-    <button ion-button (click)="addBudget()">Add Budget</button>
+    <button ion-button>Previous Week</button>
+    <button ion-button>Next Week</button>
+    <ion-list>
+        <ion-item>
+            <button ion-button (click)="addBudget()">Add Budget</button>
+        </ion-item>
+        <ion-item>
+            <button ion-button (click)="addBudget()">Add Food Transaction</button>
+        </ion-item>
+        <ion-item>
+            <button ion-button (click)="addBudget()">Add Restaurant Transaction</button>
+        </ion-item>
+    </ion-list>
 </ion-content>
