Added a Modal for the Budget Page

--- a/client/pages/budget/budget.html
+++ b/client/pages/budget/budget.html
@@ -15,10 +15,10 @@
             <button ion-button (click)="addBudget()">Add Budget</button>
         </ion-item>
         <ion-item>
-            <button ion-button (click)="addBudget()">Add Food Transaction</button>
+            <button ion-button (click)="addTrans()">Add Food Transaction</button>
         </ion-item>
         <ion-item>
-            <button ion-button (click)="addBudget()">Add Restaurant Transaction</button>
+            <button ion-button>Add Restaurant Transaction (click)=</button>
         </ion-item>
     </ion-list>
 </ion-content>
