Transaction has a number value that can be passed hopefully.

--- a/client/pages/budget/budget.html
+++ b/client/pages/budget/budget.html
@@ -24,7 +24,7 @@
         </ion-row>
         <ion-row center>
             <ion-col width-20>
-                <button ion-button block>Gc</button>
+                <button ion-button block (click)="addTrans()">Gc</button>
             </ion-col>
             <ion-col width-60 style="font-size:48px; text-align:center; font-weight:lighter;">$50</ion-col>
             <ion-col width-20>
