Better home and history page with some aggregation

--- a/client/pages/history/history.html
+++ b/client/pages/history/history.html
@@ -9,6 +9,7 @@
 
 <ion-content>
     <ion-list>
+        <ion-list-header>History of Food</ion-list-header>
         <ion-item *ngFor="let food of foods | async">
             <ion-avatar item-left>
                 <img src="http://loremflickr.com/128/128/{{ food.name }}">
@@ -16,7 +17,22 @@
             <h2>{{ food.name }}</h2>
             <h3>Location: {{ food.location }}</h3>
             <p>This item was {{ food.status }}.</p>
-            <ion-note item-right>{{ today | amDifference: food.expiration :'days' }} days ago</ion-note>
+            <ion-note item-right>
+                <span *ngIf="(food.expiration | amDifference: today :'days') == 0">expires today</span>
+                <span *ngIf="(food.expiration | amDifference: today :'days') > 0">{{ food.expiration | amDifference: today :'days' }} days left</span>
+                <span *ngIf="(food.expiration | amDifference: today :'days') < 0">expired {{ today | amDifference: food.expiration :'days' }} days ago</span>
+            </ion-note>
+        </ion-item>
+        <ion-list-header>Stats</ion-list-header>
+        <ion-item>
+            <ion-icon name="ios-nutrition" item-left></ion-icon>
+            Portions Ate
+            <ion-note>{{ foods | pluckThenSum: "portions" }}</ion-note>
+        </ion-item>
+        <ion-item>
+            <ion-icon name="cash" item-left></ion-icon>
+            Price of Food
+            <ion-note>{{ foods | pluckThenSum: "price" }}</ion-note>
         </ion-item>
     </ion-list>
 </ion-content>
