Add budget saving

--- a/client/pages/budget/budget.html
+++ b/client/pages/budget/budget.html
@@ -26,13 +26,13 @@
             <ion-col width-20>
                 <button ion-button block (click)="addTrans()">Gc</button>
             </ion-col>
-            <ion-col width-60 style="font-size:48px; text-align:center; font-weight:lighter;">$50</ion-col>
+            <ion-col width-60 style="font-size:48px; text-align:center; font-weight:lighter;">${{budget - spent}}</ion-col>
             <ion-col width-20>
                 <button ion-button block>Rt</button>
             </ion-col>
         </ion-row>
         <ion-row>
-
+            
         </ion-row>
     </ion-grid>
 </ion-content>
