--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -12,7 +12,7 @@
 <ion-content>
     <ion-list>
         <ion-list-header>
-            My Food
+            Available Grocery Foods
         </ion-list-header>
         <ion-item (click)="presentActionSheet(food)" *ngFor="let food of foods | async">
             <ion-avatar item-left>
