--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -20,7 +20,7 @@
             </ion-avatar>
             <h2>{{ food.name }}</h2>
             <h3>Location: {{ food.location }}</h3>
-            <p>{{ food.portions }} more portions left</p>
+            <p>Price: ${{ food.price }}</p>
             <ion-note item-right>
                 <span *ngIf="(food.expiration | amDifference: today :'days') == 0" danger>expires today</span>
                 <span *ngIf="(food.expiration | amDifference: today :'days') > 0">{{ food.expiration | amDifference: today :'days' }} days left</span>
