Format week at the top of budget page

--- a/client/pages/budget/budget.html
+++ b/client/pages/budget/budget.html
@@ -15,7 +15,7 @@
             </ion-col>
             <ion-col width-80>
                 <div style="text-align:center; font-weight: lighter; font-size: 24px">
-                    Week {{week}}
+                    Week {{getWeekLabel()}}
                 </div>
                 </ion-col>
             <ion-col width-10>
