--- a/client/pages/budget/budget.html
+++ b/client/pages/budget/budget.html
@@ -4,6 +4,11 @@
             <ion-icon name="menu"></ion-icon>
         </button>
         <ion-title>Budget</ion-title>
+        <ion-buttons end (click)="setBudget()">
+            <button>Edit
+                <ion-icon name="logo-usd"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 
@@ -25,8 +30,12 @@
         <ion-row center>
             <ion-col width-100 style="font-size:48px; text-align:center; font-weight:lighter;">${{budget - (foods | pluckThenSum: "price")}}</ion-col>
         </ion-row>
-        <ion-row>
-            
+        <ion-row center>
+            <ion-col width-100>
+                <progressbar [animate]="false" [max]="budget" [value]="foods | pluckThenSum: 'price'">
+                    <span style="color:white; white-space:nowrap;">{{foods | pluckThenSum: 'price'}} / {{budget}}</span>
+                </progressbar>
+            </ion-col>
         </ion-row>
     </ion-grid>
 
