--- a/client/pages/budget/budget.html
+++ b/client/pages/budget/budget.html
@@ -16,15 +16,15 @@
     <ion-grid>
         <ion-row center>
             <ion-col width-10>
-                 <button ion-button block (click)="decrementWeek()"><ion-icon name="arrow-back"></ion-icon></button>
+                 <button ion-button block (click)="previousWeek()"><ion-icon name="arrow-back"></ion-icon></button>
             </ion-col>
             <ion-col width-80>
                 <div style="text-align:center; font-weight: lighter; font-size: 24px">
-                    Week {{getWeekLabel()}}
+                    {{getWeekLabel()}}
                 </div>
                 </ion-col>
             <ion-col width-10>
-                <button ion-button block (click)="incrementWeek()"><ion-icon name="arrow-forward"></ion-icon></button>
+                <button ion-button block (click)="nextWeek()" [disabled]="week == 0"><ion-icon name="arrow-forward"></ion-icon></button>
             </ion-col>
         </ion-row>
         <ion-row center>
