--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -14,19 +14,28 @@
         <ion-list-header>
             Available Grocery Foods
         </ion-list-header>
-        <ion-item (click)="presentActionSheet(food)" *ngFor="let food of foods | async">
-            <ion-avatar item-left>
-                <img src="http://loremflickr.com/128/128/{{ food.name }}">
-            </ion-avatar>
-            <h2>{{ food.name }}</h2>
-            <h3>Location: {{ food.location }}</h3>
-            <p>Price: ${{ food.price }}</p>
-            <ion-note item-right>
-                <span *ngIf="(food.expiration | amDifference: today :'days') == 0" danger>expires today</span>
-                <span *ngIf="(food.expiration | amDifference: today :'days') > 0">{{ food.expiration | amDifference: today :'days' }} days left</span>
-                <span *ngIf="(food.expiration | amDifference: today :'days') < 0" danger>expired {{ today | amDifference: food.expiration :'days' }} days ago</span>
-            </ion-note>
-        </ion-item>
+        <ion-item-sliding *ngFor="let food of foods | async">
+            <ion-item (click)="presentActionSheet(food)">
+                <ion-avatar item-left>
+                    <img src="http://loremflickr.com/128/128/{{ food.name }}">
+                </ion-avatar>
+                <h2>{{ food.name }}</h2>
+                <h3>Location: {{ food.location }}</h3>
+                <p>Price: ${{ food.price }}</p>
+                <ion-note item-right>
+                    <span *ngIf="(food.expiration | amDifference: today :'days') == 0" danger>expires today</span>
+                    <span *ngIf="(food.expiration | amDifference: today :'days') > 0">{{ food.expiration | amDifference: today :'days' }} days left</span>
+                    <span *ngIf="(food.expiration | amDifference: today :'days') < 0" danger>expired {{ today | amDifference: food.expiration :'days' }} days ago</span>
+                </ion-note>
+            </ion-item>
+            <ion-item-options side="right">
+                <button ion-button color="danger" (click)="deleteFood(food)">
+                    <ion-icon name="trash"></ion-icon>
+                    Delete
+                </button>
+            </ion-item-options>
+        </ion-item-sliding>
+
     </ion-list>
 
     <button fab fab-right fab-bottom primary fab-fixed (click)="addFoodItem()">
