variation hash on budget and style week better

--- a/client/pages/budget/budget.html
+++ b/client/pages/budget/budget.html
@@ -20,7 +20,7 @@
             </ion-col>
             <ion-col width-80>
                 <div style="text-align:center; font-weight: lighter; font-size: 24px">
-                    {{getWeekLabel()}}
+                    Week of <br> {{getWeekLabel()}}
                 </div>
                 </ion-col>
             <ion-col width-10>
